Implementato nucleo centrale